# GPT-4.1

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: DcmLoader.cpp  DcmLoader.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h
